org.metaborg.lang.tiger.example/tests/binding/binding07.tig
  let
    type r = {x : int}
  in 
    r{x = 1, x = 2} // error: duplicate initialization
  end